--- a/web/templates/todos/index.html
+++ b/web/templates/todos/index.html
@@ -18,7 +18,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="container mx-auto">
-    <h1 class="font-bold text-2xl">Hello, World!</h1>
+    <h1 class="font-bold text-2xl">Todos</h1>
+    {{ range .todos }}
+    <hr />
+    <div>
+      <p>{{ .Title }}</p>
+      <p>{{ .Completed }}</p>
+    </div>
+    {{ end }}
   </body>
 </html>
 {{ end }}
